--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
       <div class="menu_nav">
         <ul>
           <li class="active"><a href="index.html"><span>Home Page</span></a></li>
-          <li><a href="support.html"><span>Support</span></a></li>
-          <li><a href="about.html"><span>About Us</span></a></li>
+          <li><a href="support.html"><span>FAQ</span></a></li>
+          <li><a href="about.html"><span>FEATURES</span></a></li>
           <li><a href="blog.html"><span>Blog</span></a></li>
-          <li><a href="contact.html"><span>Contact Us</span></a></li>
+          <li><a href="contact.html"><span>AUTHORS</span></a></li>
         </ul>
       </div>
       <div class="logo">
-        <h1><a href="index.html"><span>Voonte</span></a></h1>
+        <h1><a href="index.html"><span>EDI UFS UNIBANK</span></a></h1>
       </div>
       <div class="clr"></div>
       <div class="slider">
-        <div id="coin-slider"> <a href="#"><img src="images/slide1.jpg" width="960" height="360" alt="" /><span> Tusce nec iaculis risus hasellus nec sem sed tellus malesuada porttitor. Mauris scelerisque feugiat ante in vulputate. Nam sit amet ullamcorper tortor. Phasellus posuere facilisis cursus. Nunc est lorem, dictum at scelerisque sit amet, faucibus et est. Proin mattis ipsum quis arcu aliquam molestie.</span></a> <a href="#"><img src="images/slide2.jpg" width="960" height="360" alt="" /><span> Tusce nec iaculis risus hasellus nec sem sed tellus malesuada porttitor. Mauris scelerisque feugiat ante in vulputate. Nam sit amet ullamcorper tortor. Phasellus posuere facilisis cursus. Nunc est lorem, dictum at scelerisque sit amet, faucibus et est. Proin mattis ipsum quis arcu aliquam molestie.</span></a> <a href="#"><img src="images/slide3.jpg" width="960" height="360" alt="" /><span> Tusce nec iaculis risus hasellus nec sem sed tellus malesuada porttitor. Mauris scelerisque feugiat ante in vulputate. Nam sit amet ullamcorper tortor. Phasellus posuere facilisis cursus. Nunc est lorem, dictum at scelerisque sit amet, faucibus et est. Proin mattis ipsum quis arcu aliquam molestie.</span></a> </div>
+        <div id="coin-slider"> <a href="#"><img src="images/slide1.jpg" width="960" height="360" alt="" /><span> Enjoy your banking experience anytime and anywhere you want with this universal bank website. Get ready to experience a new level of convenience, efficiency, and security throughout your cash-in and out transactions with UFS. in UFS, you’re in good hands, cash in, happy cash-out</span></a> <a href="#"><img src="images/slide2.jpg" width="960" height="360" alt="" /><span> The Universal Financial Services (UFS) website is one of the world’s leading finance service websites. A world-class financial service provider known for its convenience, efficiency, integrity, and accuracy. Its users come from all over the world, including influential business leaders\entrepreneurs and some of the world’s wealthiest individuals. It assists users in achieving financial independence in the new global economy by providing invaluable information as well as aims high rate of security for a more reliable and safe transactions. Furthermore, it sends daily recommendations to users to help them increase their income and profits. They will learn how to safeguard their influential future by using insider information and stock recommendations.  </span></a> <a href="#"><img src="images/slide3.jpg" width="960" height="360" alt="" /><span> The Universal Financial Services (UFS) website is one of the world’s leading finance service websites. A world-class financial service provider known for its convenience, efficiency, integrity, and accuracy. Its users come from all over the world, including influential business leaders\entrepreneurs and some of the world’s wealthiest individuals. It assists users in achieving financial independence in the new global economy by providing invaluable information as well as aims high rate of security for a more reliable and safe transactions. Furthermore, it sends daily recommendations to users to help them increase their income and profits. They will learn how to safeguard their influential future by using insider information and stock recommendations. </span></a> </div>
         <div class="clr"></div>
       </div>
       <div class="clr"></div>
