--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       </div>
       <div class="clr"></div>
       <div class="slider">
-        <div id="coin-slider"> <a href="#"><img src="images/slide1.jpg" width="960" height="360" alt="" /><span> Enjoy your banking experience anytime and anywhere you want with this universal bank website. Get ready to experience a new level of convenience, efficiency, and security throughout your cash-in and out transactions with UFS. in UFS, you’re in good hands, cash in, happy cash-out
-        </span></a> <a href="#"><img src="images/slide2.jpg" width="960" height="360" alt="" /><span> Enjoy your banking experience anytime and anywhere you want with this universal bank website. Get ready to experience a new level of convenience, efficiency, and security throughout your cash-in and out transactions with UFS. in UFS, you’re in good hands, cash in, happy cash-out
-        </span></a> <a href="#"><img src="images/slide3.jpg" width="960" height="360" alt="" /><span> Enjoy your banking experience anytime and anywhere you want with this universal bank website. Get ready to experience a new level of convenience, efficiency, and security throughout your cash-in and out transactions with UFS. in UFS, you’re in good hands, cash in, happy cash-out
+        <div id="coin-slider"> <a href="#"><img src="images/m_1.jpg" width="960" height="360" alt="" /><span> Enjoy your banking experience anytime and anywhere you want with this universal bank website. Get ready to experience a new level of convenience, efficiency, and security throughout your cash-in and out transactions with UFS. in UFS, you’re in good hands, cash in, happy cash-out
+        </span></a> <a href="#"><img src="images/m_2.jpg" width="960" height="360" alt="" /><span> Enjoy your banking experience anytime and anywhere you want with this universal bank website. Get ready to experience a new level of convenience, efficiency, and security throughout your cash-in and out transactions with UFS. in UFS, you’re in good hands, cash in, happy cash-out
+        </span></a> <a href="#"><img src="images/m_3.jpg" width="960" height="360" alt="" /><span> Enjoy your banking experience anytime and anywhere you want with this universal bank website. Get ready to experience a new level of convenience, efficiency, and security throughout your cash-in and out transactions with UFS. in UFS, you’re in good hands, cash in, happy cash-out
         </span></a> </div>
         <div class="clr"></div>
       </div>
@@ -42,26 +42,28 @@
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-          <h2><span>Excellent Solution</span> For Your Business</h2>
+          <h2><span>EDI UFS</span> UNIBANK</h2>
           <p class="infopost">Posted <span class="date">on 11 sep 2018</span> by <a href="#">Admin</a> &nbsp;&nbsp;|&nbsp;&nbsp; Filed under <a href="#">templates</a>, <a href="#">internet</a> <a href="#" class="com">Comments <span>11</span></a></p>
           <div class="clr"></div>
           <div class="img"><img src="images/img1.jpg" width="180" height="187" alt="" class="fl" /></div>
           <div class="post_content">
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. <a href="#">Suspendisse bibendum. Cras id urna.</a> Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu posuere nunc justo tempus leo. Donec mattis, purus nec placerat bibendum, dui pede condimentum odio, ac blandit ante orci ut diam. Cras fringilla magna. Phasellus suscipit, leo a pharetra condimentum, lorem tellus eleifend magna, eget fringilla velit magna id neque. Curabitur vel urna. In tristique orci porttitor ipsum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu posuere nunc justo tempus leo.</p>
-            <p><strong>Aenean consequat porttitor adipiscing. Nam pellentesque justo ut tortor congue lobortis. Donec venenatis sagittis fringilla.</strong> Etiam nec libero magna, et dictum velit. Proin mauris mauris, mattis eu elementum eget, commodo in nulla. Mauris posuere venenatis pretium. Maecenas a dui sed lorem aliquam dictum. Nunc urna leo, imperdiet eu bibendum ac, pretium ac massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla facilisi. Quisque condimentum luctus ullamcorper.</p>
-            <p class="spec"><a href="#" class="rm">Read more</a></p>
+            <p>The Universal Financial Services (UFS) website is one of the world’s leading finance service websites. A world-class financial service provider known for its convenience, efficiency, integrity, and accuracy. Its users come from all over the world, including influential business leaders\entrepreneurs and some of the world’s wealthiest individuals. It assists users in achieving financial independence in the new global economy by providing invaluable information as well as aims high rate of security for a more reliable and safe transactions. Furthermore, it sends daily recommendations to users to help them increase their income and profits. They will learn how to safeguard their influential future by using insider information and stock recommendations.  </p>
+            <p>Ayaw muna kunu sabi ni dwight</p>
+            <p class="spec"><a href="#" class="rm">Home</a></p>
           </div>
           <div class="clr"></div>
         </div>
         <div class="article">
-          <h2><span>We'll Make Sure Template</span> Works For You</h2>
+          <h2><span>EDI UFS UNIBANK: 
+          </span> The Beginning</h2>
           <p class="infopost">Posted <span class="date">on 29 aug 2016</span> by <a href="#">Admin</a> &nbsp;&nbsp;|&nbsp;&nbsp; Filed under <a href="#">templates</a>, <a href="#">internet</a> <a href="#" class="com">Comments <span>7</span></a></p>
           <div class="clr"></div>
           <div class="img"><img src="images/img2.jpg" width="180" height="187" alt="" class="fl" /></div>
           <div class="post_content">
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. <a href="#">Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu posuere nunc justo tempus leo.</a> Donec mattis, purus nec placerat bibendum, dui pede condimentum odio, ac blandit ante orci ut diam. Cras fringilla magna. Phasellus suscipit, leo a pharetra condimentum, lorem tellus eleifend magna, eget fringilla velit magna id neque. Curabitur vel urna. In tristique orci porttitor ipsum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. Morbi tincidunt, orci ac convallis aliquam.</p>
-            <p><strong>Aenean consequat porttitor adipiscing. Nam pellentesque justo ut tortor congue lobortis. Donec venenatis sagittis fringilla.</strong> Etiam nec libero magna, et dictum velit. Proin mauris mauris, mattis eu elementum eget, commodo in nulla. Mauris posuere venenatis pretium. Maecenas a dui sed lorem aliquam dictum. Nunc urna leo, imperdiet eu bibendum ac, pretium ac massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla facilisi. Quisque condimentum luctus ullamcorper.</p>
-            <p class="spec"><a href="#" class="rm">Read more</a></p>
+            <p>The history of EDI UFS UNIBANK begins in 2014, when it was founded by the well-known Trio namely, <Strong>Mr. Esteven Gueta, Mr. Cris Ivan M. Chavez, and Mr. Dwight Asia.</Strong> It was founded in 2015 as a money-transfer platform, and it had its initial public offering in 2018. The EDI UFS UNIBANK Universal Financial Services (UFS) website is one of the leading finance service websites in the world. EDI UFS UNIBANK's history is one of success and innovation, with the company becoming a sought-after financial service provider known for its convenience, efficiency, integrity, and accuracy.
+            </p>
+            <p>The concept behind EDI UFS UNIBANK is to use specific encryption software to allow consumers to conduct financial transfers via electronic devices. It has exploded in popularity around the world and shows no signs of slowing down. The history of EDI UFS UNIBANK reveals that the company understands how to accelerate its growth while providing a seamless service to its customers. EDI UFS has a strong network, despite some challenges. The more users who sign up on the website, the more important the service becomes for retailers to accept, creating a profitable cycle for the company.</p>
+            <p class="spec"><a href="#" class="rm">Home</a></p>
           </div>
           <div class="clr"></div>
         </div>
