--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
       </div>
       <div class="logo">
-        <h1><a href="index.html"><span>EDI UFS Unibank</span></a></h1>
+        <h1><a href="index.html"><span><fontcolor= #af0404>EDI UFS Unibank </fontcolor></span></a></h1>
       </div>
       <div class="clr"></div>
       <div class="slider">
