--- a/support.html
+++ b/support.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Voonte | Support</title>
+<title>EDI UFS UNIBANK</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="css/style.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" type="text/css" href="css/coin-slider.css" />
@@ -18,18 +18,18 @@
       <div class="menu_nav">
         <ul>
           <li><a href="index.html"><span>Home Page</span></a></li>
-          <li class="active"><a href="support.html"><span>Support</span></a></li>
-          <li><a href="about.html"><span>About Us</span></a></li>
-          <li><a href="blog.html"><span>Blog</span></a></li>
-          <li><a href="contact.html"><span>Contact Us</span></a></li>
+          <li class="active"><a href="support.html"><span>FAQs</span></a></li>
+          <li><a href="about.html"><span>Feature</span></a></li>
+          <li><a href="blog.html"><span>Help</span></a></li>
+          <li><a href="contact.html"><span>Authors</span></a></li>
         </ul>
       </div>
       <div class="logo">
-        <h1><a href="index.html"><span>Voonte</span></a></h1>
+        <h1><a href="index.html"><span>EDI UFS Unibank</span></a></h1>
       </div>
       <div class="clr"></div>
       <div class="slider">
-        <div id="coin-slider"> <a href="#"><img src="images/slide1.jpg" width="960" height="360" alt="" /><span> Tusce nec iaculis risus hasellus nec sem sed tellus malesuada porttitor. Mauris scelerisque feugiat ante in vulputate. Nam sit amet ullamcorper tortor. Phasellus posuere facilisis cursus. Nunc est lorem, dictum at scelerisque sit amet, faucibus et est. Proin mattis ipsum quis arcu aliquam molestie.</span></a> <a href="#"><img src="images/slide2.jpg" width="960" height="360" alt="" /><span> Tusce nec iaculis risus hasellus nec sem sed tellus malesuada porttitor. Mauris scelerisque feugiat ante in vulputate. Nam sit amet ullamcorper tortor. Phasellus posuere facilisis cursus. Nunc est lorem, dictum at scelerisque sit amet, faucibus et est. Proin mattis ipsum quis arcu aliquam molestie.</span></a> <a href="#"><img src="images/slide3.jpg" width="960" height="360" alt="" /><span> Tusce nec iaculis risus hasellus nec sem sed tellus malesuada porttitor. Mauris scelerisque feugiat ante in vulputate. Nam sit amet ullamcorper tortor. Phasellus posuere facilisis cursus. Nunc est lorem, dictum at scelerisque sit amet, faucibus et est. Proin mattis ipsum quis arcu aliquam molestie.</span></a> </div>
+        <div id="coin-slider"> <a href="#"><img src="images/slide1.jpg" width="960" height="360" alt="" /><span> Enjoy your banking experience anytime and anywhere you want with this universal bank website. Get ready to experience a new level of convenience, efficiency, and security throughout your cash-in and out transactions with UFS. in UFS, you’re in good hands, cash in, happy cash-out</span></a> <a href="#"><img src="images/slide2.jpg" width="960" height="360" alt="" /><span> Enjoy your banking experience anytime and anywhere you want with this universal bank website. Get ready to experience a new level of convenience, efficiency, and security throughout your cash-in and out transactions with UFS. in UFS, you’re in good hands, cash in, happy cash-out</span></a> <a href="#"><img src="images/slide3.jpg" width="960" height="360" alt="" /><span> Enjoy your banking experience anytime and anywhere you want with this universal bank website. Get ready to experience a new level of convenience, efficiency, and security throughout your cash-in and out transactions with UFS. in UFS, you’re in good hands, cash in, happy cash-out</span></a> </div>
         <div class="clr"></div>
       </div>
       <div class="clr"></div>
@@ -39,19 +39,16 @@
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-          <h2><span>Support to</span> Company Name</h2>
+          <h2><span>Frequently Asked</span> Questions</h2>
           <div class="clr"></div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Suspendisse nulla ligula, blandit ultricies aliquet ac, lobortis in massa. Nunc dolor sem, tincidunt vitae viverra in, egestas sed lacus.</strong> Etiam in ullamcorper felis. Nulla cursus feugiat leo, ut dictum metus semper a. Vivamus euismod, arcu gravida sollicitudin vestibulum, quam sem tempus quam, quis ullamcorper erat nunc in massa. Donec aliquet ante non diam sollicitudin quis auctor velit sodales. Morbi neque est, posuere at fringilla non, mollis nec nibh. Sed commodo tortor nec sem tincidunt mattis. Nam convallis aliquam nibh eu luctus. Nunc vel tincidunt lacus. Suspendisse sit amet pulvinar ante.</p>
-          <p>Phasellus diam justo, laoreet vel vulputate eu, congue vel est. Maecenas eros libero, sollicitudin a vulputate fermentum, ultrices vel lacus. Nam in metus non augue fermentum consequat ultrices ac enim. Integer aliquam urna non diam aliquam eget hendrerit sem molestie.</p>
-          <p><strong>Lorem ipsum dolor sit amet</strong></p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eget bibendum tellus. Nunc vel imperdiet tellus. Mauris ornare aliquam urna, accumsan bibendum eros auctor ac.</p>
-          <ul class="sb_menu">
-            <li><a href="#"><strong>Lorem ipsum</strong></a></li>
-            <li><a href="#"><strong>Lorem ipsum</strong></a></li>
-            <li><a href="#"><strong>Lorem ipsum</strong></a></li>
-            <li><a href="#"><strong>Lorem ipsum</strong></a></li>
-            <li><a href="#"><strong>Lorem ipsum</strong></a></li>
-            <li><a href="#"><strong>Lorem ipsum</strong></a></li>
+          <p> <strong>What is EDI UFS Unibank? </strong><br>
+            <br>
+            - EDI UFS UNIBANK is an assistant for universal financial services. This website provides highly anticipated security, financial stability, and a range of convenience, efficiency, and security throughout your cash-in and cash-out transaction experience. For more adaptable and secure transactions, a large number of servers tailored to a specific country are used. It is adaptable and accessible via any physical device, including mobile phones, personal computers, laptops, and so on. Furthermore, this website allows you to pay your personal bills through online platforms, with just a few clicks. EDI UFS UNIBANK maintains efficiency and liability for faster and easier money transactions wherever and whenever you want. In UFS, you're in good hands, Happy cash in, Happy cash-out </p>
+            <br>
+            <br>
+            <p> <strong>What are the options for regaining access to your account if you inadvertently forget your user ID and password?</strong><br>
+              <br>
+            - The EDI-UFS UNIBANK website includes a URL link that allows users to reset their ID or password if they have forgotten their ID or password. This is only applicable to EDI-UFS UNIBANK user IDs that have not yet been locked. To request a password reset for an account that has already been locked, the client must contact the EDI-UFS UNIBANK Customer Contact Center. A positive identification procedure will be performed on the client. </p>
           </ul>
         </div>
       </div>
