--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       </div>
       <div class="clr"></div>
       <div class="slider">
-        <div id="coin-slider"> <a href="#"><img src="images/m_1.jpg" width="960" height="360" alt="" /><span> Enjoy your banking experience anytime and anywhere you want with this universal bank website. Get ready to experience a new level of convenience, efficiency, and security throughout your cash-in and out transactions with UFS. in UFS, you’re in good hands, cash in, happy cash-out
-        </span></a> <a href="#"><img src="images/m_2.jpg" width="960" height="360" alt="" /><span> Enjoy your banking experience anytime and anywhere you want with this universal bank website. Get ready to experience a new level of convenience, efficiency, and security throughout your cash-in and out transactions with UFS. in UFS, you’re in good hands, cash in, happy cash-out
+        <div id="coin-slider"> <a href="#"><img src="images/DSI.jpg" width="960" height="360" alt="" /><span> Enjoy your banking experience anytime and anywhere you want with this universal bank website. Get ready to experience a new level of convenience, efficiency, and security throughout your cash-in and out transactions with UFS. in UFS, you’re in good hands, cash in, happy cash-out
+        </span></a> <a href="#"><img src="images/m_1.jpg" width="960" height="360" alt="" /><span> Enjoy your banking experience anytime and anywhere you want with this universal bank website. Get ready to experience a new level of convenience, efficiency, and security throughout your cash-in and out transactions with UFS. in UFS, you’re in good hands, cash in, happy cash-out
         </span></a> <a href="#"><img src="images/m_3.jpg" width="960" height="360" alt="" /><span> Enjoy your banking experience anytime and anywhere you want with this universal bank website. Get ready to experience a new level of convenience, efficiency, and security throughout your cash-in and out transactions with UFS. in UFS, you’re in good hands, cash in, happy cash-out
         </span></a> </div>
         <div class="clr"></div>
@@ -43,7 +43,7 @@
       <div class="mainbar">
         <div class="article">
           <h2><span>EDI UFS</span> UNIBANK</h2>
-          <p class="infopost">Posted <span class="date">on 11 sep 2018</span> by <a href="#">Admin</a> &nbsp;&nbsp;|&nbsp;&nbsp; Filed under <a href="#">templates</a>, <a href="#">internet</a> <a href="#" class="com">Comments <span>11</span></a></p>
+          <p class="infopost">Posted <span class="date">on 11 sep 2022</span> by <a href="#">Admin</a> &nbsp;&nbsp;|&nbsp;&nbsp; Filed under <a href="#">templates</a>, <a href="#">internet</a> <a href="#" class="com">Comments <span>11</span></a></p>
           <div class="clr"></div>
           <div class="img"><img src="images/img1.jpg" width="180" height="187" alt="" class="fl" /></div>
           <div class="post_content">
