--- a/support.html
+++ b/support.html
@@ -45,11 +45,34 @@
             <br>
             - EDI UFS UNIBANK is an assistant for universal financial services. This website provides highly anticipated security, financial stability, and a range of convenience, efficiency, and security throughout your cash-in and cash-out transaction experience. For more adaptable and secure transactions, a large number of servers tailored to a specific country are used. It is adaptable and accessible via any physical device, including mobile phones, personal computers, laptops, and so on. Furthermore, this website allows you to pay your personal bills through online platforms, with just a few clicks. EDI UFS UNIBANK maintains efficiency and liability for faster and easier money transactions wherever and whenever you want. In UFS, you're in good hands, Happy cash in, Happy cash-out </p>
             <br>
-            <br>
             <p> <strong>What are the options for regaining access to your account if you inadvertently forget your user ID and password?</strong><br>
               <br>
             - The EDI-UFS UNIBANK website includes a URL link that allows users to reset their ID or password if they have forgotten their ID or password. This is only applicable to EDI-UFS UNIBANK user IDs that have not yet been locked. To request a password reset for an account that has already been locked, the client must contact the EDI-UFS UNIBANK Customer Contact Center. A positive identification procedure will be performed on the client. </p>
-          </ul>
+            <br>
+            <p> <strong>How can I be certain that the EDI-UFS UNIBANK website I intend to use is the official one?</strong> <br>
+              <br>
+              - To ensure that you are using a legitimate website, make sure that the name displayed under the website thumbnail is EDI-UFS UNIBANK. INC. This will ensure that the website you intend to use is one developed by our company. Any other name that contradicts this is an unauthorized version.</p>
+              <br>
+            <p> <strong>What security features are in place for EDI-UFS UNIBANK website?</strong> <br>
+              <br>
+            <Strong>The website employs strict security requirements that are as follows: </Strong>
+
+            <br>
+            - The system has two-factor authentication (device registration and One Time Password).
+            <br>
+            - The EDI-UFS UNIBANK website requires device registration.
+            <br>
+            - The system does not allow storage of sensitive account information on the phone such as account numbers, card numbers, password etc. </p>
+            <br>
+            <p> <strong>What are your current interest rates?</strong> <br>
+            <br>
+            - Our interest rates differ depending on the client. Before we offer a client a specific interest rate, we consider a number of factors. To learn more, contact your nearest EDI-UFS UNIBANK branch. </p>
+            <br>
+            <br>
+            <p> <strong>How does the EDI-UFS UNIBANK website ensure the security and protection of data subjects' information collected and processed by the Bank?</strong> <br>
+              <br>
+              - The EDI-UFS UNIBANK website has implemented the necessary security measures and controls to ensure that information collected and processed by the Bank is done in a secure manner that complies with applicable laws and regulations, as well as best practices. Please refer to the EDI-UFS UNIBANK website Privacy Notice for more information on the specific controls that the EDI-UFS UNIBANK website has in place to ensure the security and safety of information held by the Bank on data subjects and to prevent unauthorised access or disclosure.</p> 
+            </ul>
         </div>
       </div>
       <div class="sidebar">
