--- a/about.html
+++ b/about.html
@@ -18,14 +18,14 @@
       <div class="menu_nav">
         <ul>
           <li><a href="index.html"><span>Home Page</span></a></li>
-          <li><a href="support.html"><span>Support</span></a></li>
-          <li class="active"><a href="about.html"><span>About Us</span></a></li>
-          <li><a href="blog.html"><span>Blog</span></a></li>
+          <li><a href="support.html"><span>FAQs</span></a></li>
+          <li class="active"><a href="about.html"><span>FEATURES</span></a></li>
+          <li><a href="blog.html"><span>AUTHORS</span></a></li>
           <li><a href="contact.html"><span>Contact Us</span></a></li>
         </ul>
       </div>
       <div class="logo">
-        <h1><a href="index.html"><span>Voonte</span></a></h1>
+        <h1><a href="index.html"><span>EDI UFS Unibank</span></a></h1>
       </div>
       <div class="clr"></div>
       <div class="slider">
@@ -39,17 +39,26 @@
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-          <h2><span>About to</span> Company Name</h2>
+          <h2><span>FEATURES</span></h2>
           <div class="clr"></div>
-          <p><strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eget bibendum tellus. Nunc vel imperdiet tellus. Mauris ornare aliquam urna, accumsan bibendum eros auctor ac.</strong></p>
-          <p>Curabitur purus mi, pharetra vitae viverra et, mattis sit amet nunc. Quisque enim ipsum, convallis sit amet molestie in, placerat vel urna. Praesent congue auctor elit, nec pretium ipsum volutpat vitae. Vivamus eget ipsum sit amet ipsum tincidunt fermentum. Sed hendrerit neque ac erat condimentum vulputate. Nulla velit massa, dictum etinterdum quis, tempus at velit.</p>
+          <p><strong></strong></p>
+          <p>- Highly secure financial transactions <br>
+            - Available to any potential user anywhere in the world.<br>
+            - Supported by a large number of servers tailored to a specific country. For more adaptable and secure transactions.<br>
+            - Accessible with any physical device (mobile phones, personal computers, laptops, and so on).<br>
+            - Provides online service 24 hours a day, seven days a week.<br>
+            - Visualizes and tracks monthly and annual balance as well as money withdrawal and deposit experience. <br>
+            - Pay bills through online mode<br>
+            - Icon-based interface that allows you to perform the transaction you need with just one click of an icon<br>
+            - Send money (Wire Transfer) to local or international banks through telegraphic transfer<br>
+            - Transfer money (Fund Transfer) to any enrolled valid account</p><br>
         </div>
         <div class="article">
-          <h2><span>Our</span> Mission</h2>
+          <h2><span></span> </h2>
           <div class="clr"></div>
-          <p><strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eget bibendum tellus. Nunc vel imperdiet tellus. Mauris ornare aliquam urna, accumsan bibendum eros auctor ac.</strong></p>
-          <p>Maecenas vestibulum fermentum eleifend. Mauris erat sem, suscipit non tincidunt quis, vestibulum eget elit. Duis eget arcu ante. Proin nulla elit, elementum sit amet commodo et, eleifend vitae quam. Nam vel aliquam tortor. Aliquam bibendum erat a urna interdum quis mattis augue interdum. Phasellus fermentum bibendum mauris, ut semper justo pharetra vestibulum. Duis dictum purus sed nibh commodo a congue elit lobortis. Nunc sed feugiat tellus. Mauris aliquet lorem non enim euismod quis fermentum erat porta. Nullam non elit orci. Aliquam blandit mattis feugiat. Cras pulvinar aliquet massa, quis laoreet mi pulvinar ac. Aliquam mi augue, vehicula in consectetur in, porttitor sed tellus. Mauris convallis dapibus auctor. Integer in egestas lorem. In nulla dolor, sollicitudin vitae sollicitudin quis, viverra at lorem.</p>
-          <p>Ut ullamcorper velit et nisi feugiat non sagittis tortor pharetra. Mauris ut urna et magna commodo cursus. Curabitur quis elementum arcu. Maecenas eleifend, urna vitae vehicula bibendum, felis tellus tincidunt lorem, at iaculis neque eros ac dui. Nunc malesuada pulvinar suscipit. Phasellus sed tortor quis ligula facilisis aliquam. Aliquam quis magna eu dolor posuere malesuada. Quisque consequat, metus fermentum convallis imperdiet, ante justo pharetra enim, vel commodo ipsum mauris eget purus. Morbi lacinia nisl urna, scelerisque suscipit lacus. Nulla ac orci ut nunc venenatis gravida.</p>
+          <p><strong></strong></p>
+          <p></p>
+          <p></p>
         </div>
       </div>
       <div class="sidebar">
