--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Voonte | About</title>
+<title>EDI UFS Unibank</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="css/style.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" type="text/css" href="css/coin-slider.css" />
@@ -29,7 +29,10 @@
       </div>
       <div class="clr"></div>
       <div class="slider">
-        <div id="coin-slider"> <a href="#"><img src="images/slide1.jpg" width="960" height="360" alt="" /><span> Tusce nec iaculis risus hasellus nec sem sed tellus malesuada porttitor. Mauris scelerisque feugiat ante in vulputate. Nam sit amet ullamcorper tortor. Phasellus posuere facilisis cursus. Nunc est lorem, dictum at scelerisque sit amet, faucibus et est. Proin mattis ipsum quis arcu aliquam molestie.</span></a> <a href="#"><img src="images/slide2.jpg" width="960" height="360" alt="" /><span> Tusce nec iaculis risus hasellus nec sem sed tellus malesuada porttitor. Mauris scelerisque feugiat ante in vulputate. Nam sit amet ullamcorper tortor. Phasellus posuere facilisis cursus. Nunc est lorem, dictum at scelerisque sit amet, faucibus et est. Proin mattis ipsum quis arcu aliquam molestie.</span></a> <a href="#"><img src="images/slide3.jpg" width="960" height="360" alt="" /><span> Tusce nec iaculis risus hasellus nec sem sed tellus malesuada porttitor. Mauris scelerisque feugiat ante in vulputate. Nam sit amet ullamcorper tortor. Phasellus posuere facilisis cursus. Nunc est lorem, dictum at scelerisque sit amet, faucibus et est. Proin mattis ipsum quis arcu aliquam molestie.</span></a> </div>
+        <div id="coin-slider"> <a href="#"><img src="images/DSI.jpg" width="960" height="360" alt="" /><span> Enjoy your banking experience anytime and anywhere you want with this universal bank website. Get ready to experience a new level of convenience, efficiency, and security throughout your cash-in and out transactions with UFS. in UFS, you’re in good hands, cash in, happy cash-out
+        </span></a> <a href="#"><img src="images/m_1.jpg" width="960" height="360" alt="" /><span> Enjoy your banking experience anytime and anywhere you want with this universal bank website. Get ready to experience a new level of convenience, efficiency, and security throughout your cash-in and out transactions with UFS. in UFS, you’re in good hands, cash in, happy cash-out
+          .</span></a> <a href="#"><img src="images/m_3.jpg" width="960" height="360" alt="" /><span> Enjoy your banking experience anytime and anywhere you want with this universal bank website. Get ready to experience a new level of convenience, efficiency, and security throughout your cash-in and out transactions with UFS. in UFS, you’re in good hands, cash in, happy cash-out
+          </span></a> </div>
         <div class="clr"></div>
       </div>
       <div class="clr"></div>
