--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Voonte | Contact</title>
+<title>EDI UFS UNIBANK</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="css/style.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" type="text/css" href="css/coin-slider.css" />
@@ -18,18 +18,18 @@
       <div class="menu_nav">
         <ul>
           <li><a href="index.html"><span>Home Page</span></a></li>
-          <li><a href="support.html"><span>Support</span></a></li>
-          <li><a href="about.html"><span>About Us</span></a></li>
-          <li><a href="blog.html"><span>Blog</span></a></li>
-          <li class="active"><a href="contact.html"><span>Contact Us</span></a></li>
+          <li><a href="support.html"><span>FAQs</span></a></li>
+          <li><a href="about.html"><span>FEATURES</span></a></li>
+          <li><a href="blog.html"><span>AUTHORS</span></a></li>
+          <li class="active"><a href="contact.html"><span>BLOG</span></a></li>
         </ul>
       </div>
       <div class="logo">
-        <h1><a href="index.html"><span>Voonte</span></a></h1>
+        <h1><a href="index.html"><span>EDI UFS Unibank</span></a></h1>
       </div>
       <div class="clr"></div>
       <div class="slider">
-        <div id="coin-slider"> <a href="#"><img src="images/slide1.jpg" width="960" height="360" alt="" /><span> Tusce nec iaculis risus hasellus nec sem sed tellus malesuada porttitor. Mauris scelerisque feugiat ante in vulputate. Nam sit amet ullamcorper tortor. Phasellus posuere facilisis cursus. Nunc est lorem, dictum at scelerisque sit amet, faucibus et est. Proin mattis ipsum quis arcu aliquam molestie.</span></a> <a href="#"><img src="images/slide2.jpg" width="960" height="360" alt="" /><span> Tusce nec iaculis risus hasellus nec sem sed tellus malesuada porttitor. Mauris scelerisque feugiat ante in vulputate. Nam sit amet ullamcorper tortor. Phasellus posuere facilisis cursus. Nunc est lorem, dictum at scelerisque sit amet, faucibus et est. Proin mattis ipsum quis arcu aliquam molestie.</span></a> <a href="#"><img src="images/slide3.jpg" width="960" height="360" alt="" /><span> Tusce nec iaculis risus hasellus nec sem sed tellus malesuada porttitor. Mauris scelerisque feugiat ante in vulputate. Nam sit amet ullamcorper tortor. Phasellus posuere facilisis cursus. Nunc est lorem, dictum at scelerisque sit amet, faucibus et est. Proin mattis ipsum quis arcu aliquam molestie.</span></a> </div>
+        <div id="coin-slider"> <a href="#"><img src="images/DSI.jpg" width="960" height="360" alt="" /><span>Enjoy your banking experience anytime and anywhere you want with this universal bank website. Get ready to experience a new level of convenience, efficiency, and security throughout your cash-in and out transactions with UFS. in UFS, you’re in good hands, cash in, happy cash-out</span></a> <a href="#"><img src="images/m_1.jpg" width="960" height="360" alt="" /><span>Enjoy your banking experience anytime and anywhere you want with this universal bank website. Get ready to experience a new level of convenience, efficiency, and security throughout your cash-in and out transactions with UFS. in UFS, you’re in good hands, cash in, happy cash-out</span></a> <a href="#"><img src="images/m_3.jpg" width="960" height="360" alt="" /><span> Enjoy your banking experience anytime and anywhere you want with this universal bank website. Get ready to experience a new level of convenience, efficiency, and security throughout your cash-in and out transactions with UFS. in UFS, you’re in good hands, cash in, happy cash-out.</span></a> </div>
         <div class="clr"></div>
       </div>
       <div class="clr"></div>
@@ -39,38 +39,19 @@
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-          <h2><span>Contact</span></h2>
+          <h2><span>Banks should lead the way in terms of Sustainable Finance in Risk Management.</span></h2> <br>
           <div class="clr"></div>
-          <p>Nullapede laorem velit curabitudin enim in nibh ero leo in pede. Semperpurus nibh elit et convallis eu trices congue males monterdum elit.</p>
+          <p>Climate protection and sustainable business practices have risen to the top of bank boards' priority lists. This is due in part to the onset of the COVID-19 pandemic. It has become all too clear how quickly - and with previously unimaginable force - severe health and environmental risks can impact societies and economies. The world is changing at an astonishing rate, rapidly reshaping today's cultural consciousness and business environment. </p>
+          <p>While many industries, such as transportation and real estate, are already impacted by the need to meet climate targets, we are now seeing the emergence of consumers and investors demanding a shift toward sustainability from the financial industry as well.</p>
+          <p>To its credit, the banking industry recognizes this need as well. According to a recent survey conducted by the Association of German Banks, the vast majority of financial institutions expect to see noticeable and potentially serious effects from climate change on their businesses over the next ten years. Politicians and bank regulators have taken notice as well.</p>
+          <p>We believe that banks should take the lead in developing appropriate solutions to the challenges of sustainable finance. Such proactive efforts will lead to the creation of new business opportunities. We strongly advise bankers to begin reviewing their business models and strategies in light of this. </p> 
+          <p>Another important emerging area in risk management and sustainable finance is disclosure. Because of the well-known relationship between real estate portfolios and climate change, this information is receiving special attention. These requirements are in the process of being formalized. There are currently no market standards for such reporting. </p> 
+          <p>It would serve the interests of banks to set up their own solid reporting systems for dealing with sustainability as soon as possible. Excellence in providing concrete information regarding the ramifications of sustainability will most certainly be recognised as a very real competitive edge in the near future. <p> 
+          <p>Banks would benefit from establishing their own solid reporting systems for dealing with sustainability as soon as possible. Excellence in providing concrete information about the implications of sustainability will undoubtedly be recognized as a significant competitive advantage in the near future. <p> 
+
+
         </div>
-        <div class="article">
-          <h2><span>Send us</span> mail</h2>
-          <div class="clr"></div>
-          <form action="#" method="post" id="sendemail">
-            <ol>
-              <li>
-                <label for="name">Name (required)</label>
-                <input id="name" name="name" class="text" />
-              </li>
-              <li>
-                <label for="email">Email Address (required)</label>
-                <input id="email" name="email" class="text" />
-              </li>
-              <li>
-                <label for="website">Website</label>
-                <input id="website" name="website" class="text" />
-              </li>
-              <li>
-                <label for="message">Your Message</label>
-                <textarea id="message" name="message" rows="8" cols="50"></textarea>
-              </li>
-              <li>
-                <input type="image" name="imageField" id="imageField" src="images/submit.gif" class="send" />
-                <div class="clr"></div>
-              </li>
-            </ol>
-          </form>
-        </div>
+        
       </div>
       <div class="sidebar">
         <div class="searchform">
