Fix minor problem

--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
           <li><a href="support.html"><span>FAQs</span></a></li>
           <li><a href="about.html"><span>FEATURES</span></a></li>
           <li class="active"><a href="blog.html"><span>AUTHORS</span></a></li>
-          <li><a href="contact.html"><span>Contact Us</span></a></li>
+          <li><a href="contact.html"><span>BLOG</span></a></li>
         </ul>
       </div>
       <div class="logo">
