--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           <li class="active"><a href="index.html"><span>Home Page</span></a></li>
           <li><a href="support.html"><span>FAQs</span></a></li>
           <li><a href="about.html"><span>Features</span></a></li>
-          <li><a href="blog.html"><span>Blog</span></a></li>
-          <li><a href="contact.html"><span>Authors</span></a></li>
+          <li><a href="blog.html"><span>AUTHORS</span></a></li>
+          <li><a href="contact.html"><span>BLOG</span></a></li>
         </ul>
       </div>
       <div class="logo">
