Edit services overview

--- a/index.html
+++ b/index.html
@@ -119,12 +119,8 @@
         <a href="#"><img src="images/gal1.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal2.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal3.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal4.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal5.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal6.jpg" width="75" height="75" alt="" class="gal" /></a> </div>
       <div class="col c2">
         <h2><span>Services</span> Overview</h2>
-        <p>Curabitur sed urna id nunc pulvinar semper. Nunc sit amet tortor sit amet lacus sagittis posuere cursus vitae nunc.Etiam venenatis, turpis at eleifend porta, nisl nulla bibendum justo.</p>
-        <ul class="fbg_ul">
-          <li><a href="#">Lorem ipsum dolor labore et dolore.</a></li>
-          <li><a href="#">Excepteur officia deserunt.</a></li>
-          <li><a href="#">Integer tellus ipsum tempor sed.</a></li>
-        </ul>
+        <p>With EDI Universal Financial Services, your banking is just easy as you could have imagined. With this website, cashing your money in and out can be done through user-friendly interfaces already at your fingertips. This will definitely save your time and will serve you a secured-finance experience. Here, you don't have to do the drive-to-bank traditional way of banking because it's already on your screen and can access across your devices.</p>
+        
       </div>
       <div class="col c3">
         <h2><span>Contact</span> Us</h2>
