--- a/contact.html
+++ b/contact.html
@@ -78,18 +78,21 @@
           <h2 class="star"><span>Sponsors</span></h2>
           <div class="clr"></div>
           <ul class="ex_menu">
-            <li><a href="#">Lorem ipsum dolor</a><br />
-              Donec libero. Suspendisse bibendum</li>
-            <li><a href="#">Dui pede condimentum</a><br />
-              Phasellus suscipit, leo a pharetra</li>
-            <li><a href="#">Condimentum lorem</a><br />
-              Tellus eleifend magna eget</li>
-            <li><a href="#">Fringilla velit magna</a><br />
-              Curabitur vel urna in tristique</li>
-            <li><a href="#">Suspendisse bibendum</a><br />
-              Cras id urna orbi tincidunt orci ac</li>
-            <li><a href="#">Donec mattis</a><br />
-              purus nec placerat bibendum</li>
+            <li><a href="#">JP MORGAN CHASE</a><br />
+              An American multinational investment banking company  </li>
+            <li><a href="#">BANK OF AMERICA CORPORATION</a><br />
+              One of the largest banks in the world by assets and revenue.</li>
+            <li><a href="#">BERKSHIRE HATHAWAY</a><br />
+              An American multinational conglomerate, the largest financial services company by revenue in the world.</li>
+            <li><a href="#">ALLIANZ</a><br />
+              A European multinational financial services company.</li>
+            <li><a href="#">Industrial & Commercial Bank of China</a><br />
+              Multinational Chinese banking company </li>
+            <li><a href="#">BDO (Banco de Oro Universal Bank)</a><br />
+              A full-service universal bank in the Philippines.</li>
+            <li><a href="#">PING AN INSURANCE GROUP</a><br />
+              A Chinese holding conglomerate that deals with insurance, banking, and financial services.
+            </li>
           </ul>
         </div>
       </div>
