--- a/about.html
+++ b/about.html
@@ -29,10 +29,10 @@
       </div>
       <div class="clr"></div>
       <div class="slider">
-        <div id="coin-slider"> <a href="#"><img src="images/DSI.jpg" width="960" height="360" alt="" /><span> Enjoy your banking experience anytime and anywhere you want with this universal bank website. Get ready to experience a new level of convenience, efficiency, and security throughout your cash-in and out transactions with UFS. in UFS, you’re in good hands, cash in, happy cash-out
-        </span></a> <a href="#"><img src="images/m_1.jpg" width="960" height="360" alt="" /><span> Enjoy your banking experience anytime and anywhere you want with this universal bank website. Get ready to experience a new level of convenience, efficiency, and security throughout your cash-in and out transactions with UFS. in UFS, you’re in good hands, cash in, happy cash-out
-          .</span></a> <a href="#"><img src="images/m_3.jpg" width="960" height="360" alt="" /><span> Enjoy your banking experience anytime and anywhere you want with this universal bank website. Get ready to experience a new level of convenience, efficiency, and security throughout your cash-in and out transactions with UFS. in UFS, you’re in good hands, cash in, happy cash-out
-          </span></a> </div>
+        <div id="coin-slider"> <a href="#"><img src="images/1st.jpg" width="960" height="360" alt="" /></a> 
+                               <a href="#"><img src="images/2nd.jpg" width="960" height="360" alt="" /></a> 
+                               <a href="#"><img src="images/3rd.jpg" width="960" height="360" alt="" /></a> 
+                              </div>
         <div class="clr"></div>
       </div>
       <div class="clr"></div>
