--- a/index.html
+++ b/index.html
@@ -127,21 +127,19 @@
       </div>
       <div class="col c3">
         <h2><span>Contact</span> Us</h2>
-        <p>Nullam quam lorem, tristique non vestibulum nec, consectetur in risus. Aliquam a quam vel leo gravida gravida eu porttitor dui.</p>
-        <p class="contact_info"> <span>Address:</span> 1458 TemplateAccess, USA<br />
-          <span>Telephone:</span> +123-1234-5678<br />
-          <span>FAX:</span> +458-4578<br />
-          <span>Others:</span> +301 - 0125 - 01258<br />
-          <span>E-mail:</span> <a href="#">mail@yoursitename.com</a> </p>
+        <p> We are committed to provide a fast and reliable customer engagement and services. For your concerns, you can reach us with the provided accounts and links below.   </p>
+        <p class="contact_info"> <span>Address:</span> San Isidro, Bulan Sorsogon<br />
+          <span>Telephone :</span> 09465563580<br />
+          <span>Facebook:</span> <a href="#"></a>EDI Universal Finance Services<br />
+          <span>E-mail:</span> <a href="#">ediufs@gmail.com</a> </p>
       </div>
       <div class="clr"></div>
     </div>
   </div>
   <div class="footer">
     <div class="footer_resize">
-      <p class="lf">Copyright &copy; <a href="#">Domain Name</a>. All Rights Reserved</p>
-      <p class="rf">Design by <a target="_blank" href="http://www.dreamtemplate.com/">DreamTemplate</a></p>
-      <div style="clear:both;"></div>
+      <p class="lf">Copyright &copy; <a href="#">EDI UFS UNIBANK</a>. All Rights Reserved</p>
+      
     </div>
   </div>
 </div>
