edit gallery (dwight asia)

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div class="fbg_resize">
       <div class="col c1">
         <h2><span>Image</span> Gallery</h2>
-        <a href="#"><img src="images/gal1.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal2.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal3.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal4.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal5.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal6.jpg" width="75" height="75" alt="" class="gal" /></a> </div>
+        <a href="#"><img src="images/no.1.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/no.2.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/no.3.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/no.4.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/no.5.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/no.6.jpg" width="75" height="75" alt="" class="gal" /></a> </div>
       <div class="col c2">
         <h2><span>Services</span> Overview</h2>
         <p>With EDI Universal Financial Services, your banking is just easy as you could have imagined. With this website, cashing your money in and out can be done through user-friendly interfaces already at your fingertips. This will definitely save your time and will serve you a secured-finance experience. Here, you don't have to do the drive-to-bank traditional way of banking because it's already on your screen and can access across your devices.</p>
