--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
         <div class="searchform">
           <form id="formsearch" name="formsearch" method="post" action="#">
             <span>
-            <input name="editbox_search" class="editbox_search" id="editbox_search" maxlength="80" value="Search our ste:" type="text" />
+            <input name="editbox_search" class="editbox_search" id="editbox_search" maxlength="80" value="Search" type="text" />
             </span>
             <input name="button_search" src="images/search.gif" class="button_search" type="image" />
           </form>
@@ -103,7 +103,7 @@
     <div class="fbg_resize">
       <div class="col c1">
         <h2><span>Image</span> Gallery</h2>
-        <a href="#"><img src="images/gal1.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal2.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal3.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal4.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal5.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/gal6.jpg" width="75" height="75" alt="" class="gal" /></a> </div>
+        <a href="#"><img src="images/no.1.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/no.2.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/no.3.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/no.4.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/no.5.jpg" width="75" height="75" alt="" class="gal" /></a> <a href="#"><img src="images/no.6.jpg" width="75" height="75" alt="" class="gal" /></a> </div>
       <div class="col c2">
         <h2><span>Services</span> Overview</h2>
         <p>With EDI Universal Financial Services, your banking is just easy as you could have imagined. With this website, cashing your money in and out can be done through user-friendly interfaces already at your fingertips. This will definitely save your time and will serve you a secured-finance experience. Here, you don't have to do the drive-to-bank traditional way of banking because it's already on your screen and can access across your devices.</p>
@@ -111,21 +111,20 @@
       </div>
       <div class="col c3">
         <h2><span>Contact</span> Us</h2>
-        <p>Nullam quam lorem, tristique non vestibulum nec, consectetur in risus. Aliquam a quam vel leo gravida gravida eu porttitor dui.</p>
-        <p class="contact_info"> <span>Address:</span> 1458 TemplateAccess, USA<br />
-          <span>Telephone:</span> +123-1234-5678<br />
-          <span>FAX:</span> +458-4578<br />
-          <span>Others:</span> +301 - 0125 - 01258<br />
-          <span>E-mail:</span> <a href="#">mail@yoursitename.com</a> </p>
+        <p> We are committed to provide a fast and reliable customer engagement and services. For your concerns, you can reach us with the provided accounts and links below.   </p>
+        <p class="contact_info"> <span>Address:</span> San Isidro, Bulan Sorsogon<br />
+          <span>Telephone :</span> 09465563580<br />
+          <span>Facebook:</span> <a href="#"></a>EDI Universal Finance Services<br />
+          <span>E-mail:</span> <a href="#">ediufs@gmail.com</a> </p>
       </div>
       <div class="clr"></div>
     </div>
   </div>
   <div class="footer">
     <div class="footer_resize">
-      <p class="lf">Copyright &copy; <a href="#">Domain Name</a>. All Rights Reserved</p>
-      <p class="rf">Design by <a target="_blank" href="http://www.dreamtemplate.com/">DreamTemplate</a></p>
-      <div style="clear:both;"></div>
+      <p class="lf">Copyright &copy; <a href="#">EDI UFS UNIBANK</a>. All Rights Reserved</p>
+      
+      
     </div>
   </div>
 </div>
