--- a/about.html
+++ b/about.html
@@ -77,35 +77,14 @@
           <h2 class="star"><span>Sidebar</span> Menu</h2>
           <div class="clr"></div>
           <ul class="sb_menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">TemplateInfo</a></li>
-            <li><a href="#">Style Demo</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Archives</a></li>
-            <li><a href="#">Web Templates</a></li>
+            <li><a href="#">Inbox</a></li>
+            <li><a href="#">Balance</a></li>
+            <li><a href="#">Cash In</a></li>
+            <li><a href="#">Cash Out</a></li>
+            <li><a href="#">Transaction History</a></li>
           </ul>
         </div>
-        <div class="gadget">
-          <h2 class="star"><span>Sponsors</span></h2>
-          <div class="clr"></div>
-          <ul class="ex_menu">
-            <li><a href="#">JP MORGAN CHASE</a><br />
-              An American multinational investment banking company  </li>
-            <li><a href="#">BANK OF AMERICA CORPORATION</a><br />
-              One of the largest banks in the world by assets and revenue.</li>
-            <li><a href="#">BERKSHIRE HATHAWAY</a><br />
-              An American multinational conglomerate, the largest financial services company by revenue in the world.</li>
-            <li><a href="#">ALLIANZ</a><br />
-              A European multinational financial services company.</li>
-            <li><a href="#">Industrial & Commercial Bank of China</a><br />
-              Multinational Chinese banking company </li>
-            <li><a href="#">BDO (Banco de Oro Universal Bank)</a><br />
-              A full-service universal bank in the Philippines.</li>
-            <li><a href="#">PING AN INSURANCE GROUP</a><br />
-              A Chinese holding conglomerate that deals with insurance, banking, and financial services.
-            </li>
-          </ul>
-        </div>
+        
       </div>
       <div class="clr"></div>
     </div>
