--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
       <div class="mainbar">
         <div class="article">
           <h2><span>EDI UFS</span> UNIBANK</h2>
-          <p class="infopost">Posted <span class="date">on 11 sep 2022</span> by <a href="#">Admin</a> &nbsp;&nbsp;|&nbsp;&nbsp; Filed under <a href="#">templates</a>, <a href="#">internet</a> <a href="#" class="com">Comments <span>11</span></a></p>
+          <p class="infopost">Posted <span class="date">on 11 sep 2022</span> by <a href="#">Admin</a> &nbsp;&nbsp;|&nbsp;&nbsp; Filed under <a href="#">templates</a>, <a href="#">internet</a> <a href="#" class="com"> </span></a></p>
           <div class="clr"></div>
           <div class="img"><img src="images/img1.jpg" width="180" height="187" alt="" class="fl" /></div>
           <div class="post_content">
             <p>The Universal Financial Services (UFS) website is one of the world’s leading finance service websites. A world-class financial service provider known for its convenience, efficiency, integrity, and accuracy. Its users come from all over the world, including influential business leaders\entrepreneurs and some of the world’s wealthiest individuals. It assists users in achieving financial independence in the new global economy by providing invaluable information as well as aims high rate of security for a more reliable and safe transactions. Furthermore, it sends daily recommendations to users to help them increase their income and profits. They will learn how to safeguard their influential future by using insider information and stock recommendations.  </p>
             <p></p>
-            <p class="spec"><a href="#" class="rm">Home</a></p>
+            
           </div>
           <div class="clr"></div>
         </div>
         <div class="article">
           <h2><span>EDI UFS UNIBANK: 
           </span> The Beginning</h2>
-          <p class="infopost">Posted <span class="date">on 29 aug 2016</span> by <a href="#">Admin</a> &nbsp;&nbsp;|&nbsp;&nbsp; Filed under <a href="#">templates</a>, <a href="#">internet</a> <a href="#" class="com">Comments <span>7</span></a></p>
+          <p class="infopost">Posted <span class="date">on 29 aug 2016</span> by <a href="#">Admin</a> &nbsp;&nbsp;|&nbsp;&nbsp; Filed under <a href="#">templates</a>, <a href="#">internet</a> <a href="#" class="com"> </span></a></p>
           <div class="clr"></div>
           <div class="img"><img src="images/img2.jpg" width="180" height="187" alt="" class="fl" /></div>
           <div class="post_content">
@@ -82,35 +82,14 @@
           <h2 class="star"><span>Sidebar</span> Menu</h2>
           <div class="clr"></div>
           <ul class="sb_menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">TemplateInfo</a></li>
-            <li><a href="#">Style Demo</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Archives</a></li>
-            <li><a href="#">Web Templates</a></li>
+            <li><a href="#">Inbox</a></li>
+            <li><a href="#">Balance</a></li>
+            <li><a href="#">Cash In</a></li>
+            <li><a href="#">Cash Out</a></li>
+            <li><a href="#">Transaction History</a></li>
           </ul>
         </div>
-        <div class="gadget">
-          <h2 class="star"><span>Partnerships</span></h2>
-          <div class="clr"></div>
-          <ul class="ex_menu">
-            <li><a href="#">JP MORGAN CHASE</a><br />
-              An American multinational investment banking company  </li>
-            <li><a href="#">BANK OF AMERICA CORPORATION</a><br />
-              One of the largest banks in the world by assets and revenue.</li>
-            <li><a href="#">BERKSHIRE HATHAWAY</a><br />
-              An American multinational conglomerate, the largest financial services company by revenue in the world.</li>
-            <li><a href="#">ALLIANZ</a><br />
-              A European multinational financial services company.</li>
-            <li><a href="#">Industrial & Commercial Bank of China</a><br />
-              Multinational Chinese banking company </li>
-            <li><a href="#">BDO (Banco de Oro Universal Bank)</a><br />
-              A full-service universal bank in the Philippines.</li>
-            <li><a href="#">PING AN INSURANCE GROUP</a><br />
-              A Chinese holding conglomerate that deals with insurance, banking, and financial services.
-            </li>
-          </ul>
-        </div>
+      
       </div>
       <div class="clr"></div>
     </div>
